# AWSomeLib

./: README.md  pyproject.toml
src/awsomelib/: __init__.py  awsomelib.py  custom_types.py  state.py
